--- a/turf-booking-backend/package.json
+++ b/turf-booking-backend/package.json
@@ -7,17 +7,25 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon src/app.js",
-    "debug": "nodemon --inspect-brk src/app.js"   
+    "debug": "nodemon --inspect-brk src/app.js"
   },
   "keywords": [],
   "author": "Sevinjeno",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.6",
     "express": "^4.21.1",
+    "express-validator": "^7.2.0",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "pg": "^8.13.1"
+    "nodemailer": "^6.9.16",
+    "otp-generator": "^4.0.1",
+    "pg": "^8.13.1",
+    "twilio": "^5.3.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
