--- a/turf-booking-frontend/package.json
+++ b/turf-booking-frontend/package.json
@@ -11,17 +11,24 @@
   },
   "dependencies": {
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
+    "@radix-ui/react-checkbox": "^1.1.3",
     "@react-leaflet/core": "^3.0.0",
     "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.470.0",
     "mapbox-gl": "^3.9.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.2",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "sass": "^1.83.4",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
