--- a/turf-booking-frontend/tsconfig.json
+++ b/turf-booking-frontend/tsconfig.json
@@ -9,7 +9,12 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
