--- a/turf-booking-frontend/package.json
+++ b/turf-booking-frontend/package.json
@@ -31,6 +31,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.26.3",
     "@eslint/js": "^9.15.0",
     "@types/mapbox__mapbox-gl-geocoder": "^5.0.0",
     "@types/mapbox-gl": "^3.4.1",
