--- a/turf-booking-frontend/package.json
+++ b/turf-booking-frontend/package.json
@@ -13,15 +13,20 @@
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@react-leaflet/core": "^3.0.0",
-    "@reduxjs/toolkit": "^2.4.0",
+    "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.18",
     "leaflet": "^1.9.4",
+    "libphonenumber-js": "^1.12.17",
     "lucide-react": "^0.470.0",
     "mapbox-gl": "^3.9.2",
     "react": "^19.0.0",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^6.0.0",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-leaflet": "^5.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.2",
