--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -1,21 +1,37 @@
-name: Build Frontend Image
+name: Frontend CI/CD
+
+# 1️⃣ When this workflow runs
 on:
   push:
+    branches:
+      - main
     paths:
-      - 'turf-frontend/**'
-      - '.github/workflows/frontend-build.yml'
+      - 'turf-booking-frontend/**'
+      - '.github/workflows/frontend-ci.yml'
+
+# 2️⃣ The environment to run jobs
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: docker/setup-buildx-action@v3
-      - uses: docker/login-action@v3
+      # Step 1: Checkout your repo
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      # Step 2: Log in to Docker Hub
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-      - uses: docker/build-push-action@v5
-        with:
-          context: ./turf-frontend
-          push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/turf-frontend:latest
+
+      # Step 3: Build Docker image
+      - name: Build Docker image
+        run: |
+          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/turf-frontend:latest ./turf-booking-frontend
+
+      # Step 4: Push image to Docker Hub
+      - name: Push Docker image
+        run: |
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/turf-frontend:latest
