--- a/turf-booking-frontend/package.json
+++ b/turf-booking-frontend/package.json
@@ -7,7 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
@@ -26,6 +30,7 @@
     "react-datepicker": "^8.7.0",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^6.0.0",
+    "react-icons": "^5.5.0",
     "react-lazy-load-image-component": "^1.6.3",
     "react-leaflet": "^5.0.0",
     "react-redux": "^9.1.2",
@@ -36,23 +41,29 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.26.3",
     "@eslint/js": "^9.15.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/mapbox__mapbox-gl-geocoder": "^5.0.0",
     "@types/mapbox-gl": "^3.4.1",
     "@types/react": "^18.3.16",
     "@types/react-dom": "^18.3.5",
     "@types/react-leaflet": "^3.0.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^4.0.9",
+    "@vitest/ui": "^4.0.9",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
+    "msw": "^2.12.2",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2",
-    "vite": "^6.0.1"
+    "vite": "^6.0.1",
+    "vitest": "^4.0.9"
   }
 }
