--- a/turf-booking-backend/package.json
+++ b/turf-booking-backend/package.json
@@ -34,6 +34,8 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.13.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "twilio": "^5.3.7"
   },
   "devDependencies": {
